adding profile features
